# cppgpt

./: CMakeLists.txt  README.md  cppgpt.hpp
.devcontainer/: devcontainer.json
example/: CMakeLists.txt  groq.cpp  main.cpp
include/: cppgpt.hpp  cppollama.hpp
